--- a/Banco/Banco.project
+++ b/Banco/Banco.project
@@ -93,6 +93,10 @@
     </Configuration>
   </Settings>
   <VirtualDirectory Name="src">
+    <File Name="Cpf.cpp"/>
+    <File Name="Cpf.hpp"/>
+    <File Name="Titular.cpp"/>
+    <File Name="Titular.hpp"/>
     <File Name="Conta.cpp"/>
     <File Name="Conta.hpp"/>
     <File Name="main.cpp"/>
