--- a/Banco/Banco.project
+++ b/Banco/Banco.project
@@ -2,6 +2,30 @@
 <CodeLite_Project Name="Banco" Version="11000" InternalType="Console">
   <Description/>
   <Dependencies/>
+  <VirtualDirectory Name="src">
+    <File Name="DiaDaSemana.hpp"/>
+    <File Name="Autenticavel.cpp"/>
+    <File Name="Autenticavel.hpp"/>
+    <File Name="Gerente.cpp"/>
+    <File Name="Gerente.hpp"/>
+    <File Name="Caixa.cpp"/>
+    <File Name="Caixa.hpp"/>
+    <File Name="ContaCorrente.cpp"/>
+    <File Name="ContaCorrente.hpp"/>
+    <File Name="ContaPoupanca.cpp"/>
+    <File Name="ContaPoupanca.hpp"/>
+    <File Name="Pessoa.cpp"/>
+    <File Name="Pessoa.hpp"/>
+    <File Name="Funcionario.cpp"/>
+    <File Name="Funcionario.hpp"/>
+    <File Name="Cpf.cpp"/>
+    <File Name="Cpf.hpp"/>
+    <File Name="Titular.cpp"/>
+    <File Name="Titular.hpp"/>
+    <File Name="Conta.cpp"/>
+    <File Name="Conta.hpp"/>
+    <File Name="main.cpp"/>
+  </VirtualDirectory>
   <Settings Type="Executable">
     <GlobalSettings>
       <Compiler Options="" C_Options="" Assembler="">
@@ -13,7 +37,7 @@
       <ResourceCompiler Options=""/>
     </GlobalSettings>
     <Configuration Name="Debug" CompilerType="GCC-9" DebuggerType="GNU gdb debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
-      <Compiler Options="-g;-O0;-Wall" C_Options="-g;-O0;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
+      <Compiler Options="-g;-O0;-std=c++17;-Wall" C_Options="-g;-O0;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
         <IncludePath Value="."/>
       </Compiler>
       <Linker Options="" Required="yes"/>
@@ -92,28 +116,4 @@
       </Completion>
     </Configuration>
   </Settings>
-  <VirtualDirectory Name="src">
-    <File Name="DiaDaSemana.hpp"/>
-    <File Name="Autenticavel.cpp"/>
-    <File Name="Autenticavel.hpp"/>
-    <File Name="Gerente.cpp"/>
-    <File Name="Gerente.hpp"/>
-    <File Name="Caixa.cpp"/>
-    <File Name="Caixa.hpp"/>
-    <File Name="ContaCorrente.cpp"/>
-    <File Name="ContaCorrente.hpp"/>
-    <File Name="ContaPoupanca.cpp"/>
-    <File Name="ContaPoupanca.hpp"/>
-    <File Name="Pessoa.cpp"/>
-    <File Name="Pessoa.hpp"/>
-    <File Name="Funcionario.cpp"/>
-    <File Name="Funcionario.hpp"/>
-    <File Name="Cpf.cpp"/>
-    <File Name="Cpf.hpp"/>
-    <File Name="Titular.cpp"/>
-    <File Name="Titular.hpp"/>
-    <File Name="Conta.cpp"/>
-    <File Name="Conta.hpp"/>
-    <File Name="main.cpp"/>
-  </VirtualDirectory>
 </CodeLite_Project>
